[package]
name = "v4v-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"

derive_into_dynamo = { git = "ssh://git@github.com/Conshax/derive_into_dynamo.git"}
into_dynamo = { git = "ssh://git@github.com/Conshax/derive_into_dynamo.git"}
aws-sdk-dynamodb = "0.24.0"
